src/0.wiki/k8s/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "0"
  name: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      volumes:
        - {name: src,              hostPath:  {path: /home/org.dokuwiki,  type: Directory}}
        - {name: volume,           hostPath:  {path: /home/0.wiki,        type: Directory}}
        - {name: configmap-volume, configMap: {name: 0.wiki-configmap}}
      containers:
        - name: wiki
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - {protocol: TCP, containerPort: 80}
          volumeMounts:
            - {name: src,                                                       mountPath: /usr/share/nginx/html}
            - {name: configmap-volume, subPath: default.conf,                   mountPath: /etc/nginx/conf.d/default.conf}
            - {name: configmap-volume, subPath: nginx.conf,                     mountPath: /etc/nginx/nginx.conf}
        - name: wiki-php
          # TODO: container.0/net.php.fpm:latest
          image: container.0/net.php.fpm:7
          imagePullPolicy: IfNotPresent
          ports:
            - {protocol: TCP, containerPort: 9000}
          volumeMounts:
            - {name: src,                                                       mountPath: /usr/share/nginx/html}
            - {name: volume,                subPath: pages,                     mountPath: /usr/share/nginx/html/data/pages}
            - {name: volume,                subPath: media,                     mountPath: /usr/share/nginx/html/data/media}
            - {name: volume,                subPath: conf/acl.auth.php,         mountPath: /usr/share/nginx/html/conf/acl.auth.php}
            - {name: volume,                subPath: conf/interwiki.local.conf, mountPath: /usr/share/nginx/html/conf/interwiki.local.conf}
            - {name: volume,                subPath: conf/users.auth.php,       mountPath: /usr/share/nginx/html/conf/users.auth.php}
            - {name: volume,                subPath: conf/local.php,            mountPath: /usr/share/nginx/html/conf/local.php}
            - {name: volume,                subPath: conf/plugins.local.php,    mountPath: /usr/share/nginx/html/conf/plugins.local.php}
          command: [/bin/sh, -c]
          args:
            - |
              chown -R 82:82 /usr/share/nginx/html
              docker-php-entrypoint php-fpm

---
apiVersion: v1
kind: Service
metadata:
  namespace: "0"
  name: wiki
spec:
  type: LoadBalancer
  selector:
    app: wiki
  ports:
    - {protocol: TCP, port: 80}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: wiki
spec:
  rules:
    - host: wiki.0
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wiki
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: wiki-ui
spec:
  rules:
    - host: wiki.${webui_tld}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wiki
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: tld
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(.*)$ $scheme://wiki.${webui_tld}$1 permanent;
spec:
  rules:
    - host: "${webui_tld}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wiki
                port:
                  number: 80
